@@ -1,5 +1,10 @@
 2008-11-14  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/examples/list_contacts/main.c: Get other contact features, 
+	to show aliases and presence.
+
+2008-11-14  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/examples/list_contacts/main.c: Examine the actual contacts 
 	handles as before rather than the handle for the list of contacts.
 	This now works.
